# morocco

./: .travis.yml  Cargo.toml  README.md
ci/: before_deploy.sh
src/: aws.rs  encryption.rs  main.rs  morocco.rs  squirrel.rs
src/aws/: dynamo.rs  kms.rs  mod.rs
